Alignment issues

--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,10 @@ main {
 
 .about__desc {
   font-size: 1rem;
+  width: 100%;
   max-width: 600px;
+  margin: 2.4em auto 0;
+  text-align: center;
 }
 
 .about__desc,
